feat: add opening partner balances
